get all cook county tracts not just chicago

--- a/pipeline/3-get-tracts.ipynb
+++ b/pipeline/3-get-tracts.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
+    "import pygris\n",
     "\n",
-    "from data.constants import TRACT_TABLE, LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE"
+    "from data.constants import LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_file = \"../data/raw/tracts.geojson\"\n",
-    "comm_file = \"../data/raw/communities.geojson\""
+    "tract_file_out = \"../data/raw/tracts.geojson\"\n",
+    "comm_file_out = \"../data/raw/communities.geojson\""
    ]
   },
   {
@@ -44,11 +45,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using FIPS code '17' for input 'IL'\n",
+      "Using FIPS code '031' for input 'cook'\n"
+     ]
+    }
+   ],
    "source": [
-    "tract_points = gpd.read_file(TRACT_TABLE).filter(['geoid10','geometry']).drop_duplicates()\n",
-    "tract_points['geoid10'] = pd.to_numeric(tract_points['geoid10'])\n",
-    "tract_points['centroid'] = tract_points['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()"
+    "tracts = pygris.tracts(state='IL', county='cook', cb=True, year=2020, cache=False)\n",
+    "tracts = tracts[['GEOID','geometry']].rename(columns={'GEOID':'geoid10'})\n",
+    "tracts = tracts.to_crs(WORLD_CRS)\n",
+    "tracts['geoid10'] = pd.to_numeric(tracts['geoid10'])\n",
+    "tracts['centroid'] = tracts['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()"
    ]
   },
   {
@@ -74,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comm_points.to_file(comm_file, index=False)\n",
-    "tract_points.to_file(tract_file, index=False)"
+    "comm_points.to_file(comm_file_out, index=False)\n",
+    "tracts.to_file(tract_file_out, index=False)"
    ]
   }
  ],
