--- a/pipeline/3.1-profile-data.ipynb
+++ b/pipeline/3.1-profile-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We expect 801 tracts\n"
+      "We expect 1331 tracts\n"
      ]
     }
    ],
    "source": [
-    "print(\"We expect {} tracts\".format(tracts.geoid10.nunique()))"
+    "print(\"We expect {} tracts\".format(tracts.geoid10.nunique()))\n",
+    "# Chicago itself has 801 tracts."
    ]
   }
  ],
