snap out of bounds bike rides to nearest tract

--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -51,6 +51,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOLERANCE = 200  # meters"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +395,81 @@
     "bike_stations = bike_stations.pipe(code_tract)\n",
     "bike_rides = bike_rides.pipe(code_tract)\n",
     "bus_stops = bus_stops.pipe(code_tract)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bike rides with unknown tract 0.26%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bike rides with unknown tract {:.2%}\".format(\n",
+    "    bike_rides.tract.isna().mean()\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point 0.2% of bike rides are not strictly within a tract. \n",
+    "But they happen to be really close, so let's"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def code_nearest_tract(gdf):\n",
+    "    \"\"\"\n",
+    "    Spatial join point to census tract\n",
+    "    \"\"\"\n",
+    "    tracts_proj = tract_points.to_crs(LOCAL_CRS)\n",
+    "    gdf_proj = gdf.to_crs(LOCAL_CRS)\n",
+    "    comm_proj = comm_points.to_crs(LOCAL_CRS)\n",
+    "    opts = dict(how='left', distance_col='dist', max_distance=meter_to_foot(TOLERANCE))\n",
+    "    coded_tracts = gdf_proj[['geometry']].sjoin_nearest(tracts_proj[['geoid10','geometry']], **opts)\n",
+    "    coded_comms = gdf_proj[['geometry']].sjoin_nearest(comm_proj[['area_num_1','geometry']], **opts)\n",
+    "    assert all(coded_tracts.dist <= TOLERANCE)\n",
+    "    assert all(coded_comms.dist <= TOLERANCE)\n",
+    "    gdf = pd.concat([gdf, \n",
+    "                    coded_tracts['geoid10'].rename('tract'), \n",
+    "                    coded_comms['area_num_1'].rename('comm_area')],\n",
+    "                    axis=1)\n",
+    "    return gdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_rides_nearest = bike_rides[bike_rides.tract.isna()].drop(columns=['tract','comm_area'])\n",
+    "bike_rides_nearest = code_nearest_tract(bike_rides_nearest)\n",
+    "# Just take first in case any are equidistant.\n",
+    "bike_rides_nearest = bike_rides_nearest.loc[bike_rides_nearest.index.drop_duplicates()]\n",
+    "assert bike_rides_nearest[['tract','comm_area']].notna().all().all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_rides = pd.concat([bike_rides[bike_rides.tract.notna()], \n",
+    "                        bike_rides_nearest])"
    ]
   },
   {
@@ -404,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
