--- a/pipeline/7-merge-transits.ipynb
+++ b/pipeline/7-merge-transits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "max     0.031250  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,10 +520,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# XXX TODO: I dont like this here.\n",
     "uber_rides = uber_rides.dropna(subset=['tract'])"
    ]
   },
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,86 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tract</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>transit</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>bike</th>\n",
-       "      <td>0.002574</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>train</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>uber</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0166</td>\n",
-       "      <td>0.0166</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            tract     lat    long\n",
-       "transit                          \n",
-       "bike     0.002574  0.0000  0.0000\n",
-       "train    0.000000  0.0000  0.0000\n",
-       "uber     0.000000  0.0166  0.0166"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# TODO: DEBUG:\n",
-    "# Where are these nulls coming from?\n",
-    "point_panel.groupby('transit')[['tract','lat','long']].agg(lambda x: x.isna().mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
