get community area uber rides and re-run pipeline

--- a/pipeline/5.3-reduce-divvy.ipynb
+++ b/pipeline/5.3-reduce-divvy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save for assertions later\n",
-    "nobs = len(bike_rides)\n",
-    "total_rides = bike_rides.filter(like='ride').sum()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,23 +92,13 @@
     "              .groupby(['geometry','station_name','date'], as_index=False)\n",
     "              .agg({\"start_rides\": lambda x: x.fillna(0).sum(),\n",
     "                    \"end_rides\": lambda x: x.fillna(0).sum(),\n",
-    "                    \"rides\": lambda x: x.fillna(0).sum()}))\n",
-    "# This downcasts to DataFrame. Fix later"
+    "                    \"rides\": lambda x: x.fillna(0).sum()})\n",
+    "              .pipe(gpd.GeoDataFrame, geometry='geometry'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Upcast back to GeoDataFrame\n",
-    "bike_rides = gpd.GeoDataFrame(bike_rides, geometry='geometry')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +180,7 @@
        "167740  POINT (-87.66208 41.80135)    Public Rack - Laflin St &51st ST"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
