--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -35,7 +35,7 @@
     "train_rides_in = \"../data/raw/train_rides.csv\"\n",
     "bus_rides_in = \"../data/raw/bus_rides.csv\"\n",
     "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
-    "uber_rides_in = \"../data/raw/uber_rides.parquet\"\n",
+    "uber_rides_in = \"../data/raw/uber_tract_rides.parquet\"\n",
     "\n",
     "train_file_out = \"../data/interim/train_stations.geojson\"\n",
     "bus_routes_file_out = \"../data/interim/bus_routes.geojson\"\n",
@@ -315,15 +315,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cta_client = CTAClient(60)\n",
     "lines = ['red','blue','g','brn','p','pexp','y','pnk','o']\n",
