* get l station geoms * get tract demogs * label dotw and weekends

--- a/notebooks/exploratory/2024/11/gut-check.ipynb
+++ b/notebooks/exploratory/2024/11/gut-check.ipynb
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "yearly_rides = point_panel.groupby(['year','transit']).agg({'rides':'sum','DNC':'any'})\n",
     "monthly_rides = point_panel.groupby(['year-month','transit']).agg({'rides':'sum','DNC':'any'})\n",
     "weekly_rides = point_panel.groupby(['year-week','transit']).agg({'rides':'sum','DNC':'any'})\n",
-    "daily_rides = point_panel.groupby(['date','transit']).agg({'rides':'sum', 'daytype':'first','DNC':'any'})"
+    "daily_rides = point_panel.groupby(['date','transit']).agg({'rides':'sum', 'dotw':'first','is_weekend':'first','DNC':'any'})"
    ]
   },
   {
@@ -38742,9 +38742,9 @@
     "            group_exog.append('is_holiday')\n",
     "        else:\n",
     "            dates = gd['date']\n",
-    "            dummies = pd.get_dummies(gd['daytype'],'daytype_dummy') * 1.0\n",
+    "            dummies = pd.get_dummies(gd['is_weekend'],'weekend_dummy') * 1.0\n",
     "            gd = pd.concat([gd, dummies], axis=1)\n",
-    "            group_exog.extend(gd.filter(like='daytype_dummy_').columns.values)\n",
+    "            group_exog.extend(gd.filter(like='weekend_dummy_').columns.values)\n",
     "        gd = gd.set_index(pd.DatetimeIndex(dates,'infer')).sort_index()\n",
     "        model_exog = [exog] if exog is not None else [] + group_exog\n",
     "        model = AutoReg(endog=gd[endog], \n",
@@ -40917,14 +40917,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "yearly_rides = poi_panel.groupby(['year','transit','id']).agg({'rides':'sum','DNC':'any'})\n",
     "monthly_rides = poi_panel.groupby(['year-month','transit','id']).agg({'rides':'sum','DNC':'any'})\n",
     "weekly_rides = poi_panel.groupby(['year-week','transit','id']).agg({'rides':'sum','DNC':'any'})\n",
-    "daily_rides = poi_panel.groupby(['date','transit','id']).agg({'rides':'sum', 'daytype':'first','DNC':'any'})"
+    "daily_rides = poi_panel.groupby(['date','transit','id']).agg({'rides':'sum', 'dotw':'first','is_weekend':'first','DNC':'any'})"
    ]
   },
   {
