--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -9,9 +9,10 @@
     "import geopandas as gpd\n",
     "from shapely.geometry import shape\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from data.constants import (WORLD_CRS, \n",
-    "    L_STATIONS_TABLE, BUS_ROUTES_TABLE, BUS_STOPS_TABLE)\n",
+    "    L_STATIONS_TABLE, L_LINES_TABLE, BUS_ROUTES_TABLE, BUS_STOPS_TABLE)\n",
     "from data.cta import CTAClient"
    ]
   },
@@ -21,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_out = \"../data/raw/train_stations.geojson\"\n",
+    "train_stations_out = \"../data/raw/train_stations.geojson\"\n",
+    "train_lines_out = \"../data/raw/train_lines.geojson\"\n",
     "bus_routes_file_out = \"../data/raw/bus_routes.geojson\"\n",
     "bus_stops_file_out = \"../data/raw/bus_stops.geojson\""
    ]
@@ -81,12 +83,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bus Routes"
+    "# Train Lines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Need to get lines in two parts becuase the datasets are hard to merge.\n",
+    "\n",
+    "1. First, we just take the line identifiers, which do exist in the stations table.\n",
+    "2. Next we get the actual line segments table, which is better for geo mapping."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is wide, so we need to consolidate and narrow it.\n",
+    "lines = ['red','blue','g','brn','p','pexp','y','pnk','o']\n",
+    "line_names = ['red','blue','green','brown','purple','purpleexp','yellow','pink','orange']\n",
+    "station_ids = ['station_name', 'map_id']\n",
+    "\n",
+    "station_to_line = client.soda_get_all(L_STATIONS_TABLE, select=f\"{','.join(station_ids)}, {','.join(lines)}\")\n",
+    "station_to_line = station_to_line.rename(columns=dict(zip(lines, line_names)))\n",
+    "station_to_line['purple'] = station_to_line['purple'] | station_to_line['purpleexp']\n",
+    "station_to_line = station_to_line.drop(columns=['purpleexp'])\n",
+    "station_to_line = station_to_line.melt(id_vars=station_ids, var_name='line', value_name='is_line')\n",
+    "station_to_line = station_to_line.query('is_line').drop(columns='is_line')\n",
+    "station_to_line = station_to_line.groupby(station_ids, as_index=False)['line'].agg(lambda x: ','.join(set(x)))\n",
+    "\n",
+    "train_stations = train_stations.merge(station_to_line, how='left')\n",
+    "assert train_stations['line'].notna().all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the legit lines gdf but it doesn't have neat identifiers to relate to the stations.\n",
+    "train_lines = gpd.read_file(L_LINES_TABLE)\n",
+    "train_lines['single_line'] = train_lines['legend'].map({'BR':'brown','YL':'yellow','GR':'green',\n",
+    "                                        'OR':'orange','RD':'red','BL':'blue',\n",
+    "                                        'PK':'pink','PR':'purple'})\n",
+    "train_lines['multi_lines'] = train_lines['lines'].str.split(', ')\n",
+    "train_lines = train_lines.explode('multi_lines')\n",
+    "train_lines['multi_lines'] = train_lines['multi_lines'].str.lower().str.replace('(express)','').str.replace('(exp)','').str.strip()\n",
+    "train_lines['line'] = np.where(train_lines['single_line'].notna(), train_lines['single_line'], train_lines['multi_lines'])\n",
+    "train_lines = train_lines.filter(['geometry','line']).drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bus Routes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,11 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_stations.to_file(train_file_out, index=False)\n",
+    "train_stations.to_file(train_stations_out, index=False)\n",
+    "train_lines.to_file(train_lines_out, index=False)\n",
     "bus_routes.to_file(bus_routes_file_out, index=False)\n",
     "bus_stops.to_file(bus_stops_file_out, index=False)"
    ]
