--- a/pipeline/3-get-tracts.ipynb
+++ b/pipeline/3-get-tracts.ipynb
@@ -9,6 +9,8 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import pygris\n",
+    "import censusdis.data as ced\n",
+    "from censusdis import states\n",
     "\n",
     "from data.constants import LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE"
    ]
@@ -64,8 +66,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tract Demographics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET = \"acs/acs5\"\n",
+    "YEAR = 2020\n",
+    "VARIABLES = {\"NAME\": \"CENSUS_ROW\",\n",
+    "             \"B01003_001E\": \"TOTAL_POPULATION\",\n",
+    "             \"B19013_001E\": \"MEDIAN_HOUSEHOLD_INCOME\"}\n",
+    "\n",
+    "demographics = ced.download(\n",
+    "    DATASET,\n",
+    "    YEAR,\n",
+    "    VARIABLES.keys(),\n",
+    "    state=states.IL,\n",
+    "    county=\"031\", # cook county\n",
+    "    tract=\"*\",\n",
+    "    with_geometry=True,\n",
+    "    with_geometry_columns=True\n",
+    ")\n",
+    "demographics = (demographics\n",
+    "        .rename(columns=VARIABLES)\n",
+    "        .dropna(subset=['GEOID'])\n",
+    "        .assign(geoid10 = lambda x: x['GEOID'].astype(int))\n",
+    "        .filter(['geoid10'] + list(VARIABLES.values())))\n",
+    "\n",
+    "tracts = (tracts\n",
+    "          .merge(demographics, how='left', on='geoid10')\n",
+    "          .drop(columns=['CENSUS_ROW']))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chicago Community Areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
