--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,26 +189,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10it [03:02, 18.25s/it]\n"
+      "10it [02:49, 16.99s/it]\n"
      ]
     }
    ],
    "source": [
-    "# Takes ~2m to run\n",
+    "# Takes ~3m to run\n",
     "bike_rides = divvy_client.s3_bike_trips(dt.fromisoformat(data_start_iso).year, \n",
     "                                        dt.fromisoformat(data_end_iso).year)\n",
     "bike_rides = map(agg_ridership, bike_rides)\n",
     "bike_rides = pd.concat(list(tqdm(bike_rides)), ignore_index=True)\n",
     "bike_rides = bike_rides.loc[(bike_rides['date'] >= iso_to_ymd(data_start_iso)) & \\\n",
-    "                            (bike_rides['date'] <= iso_to_ymd(data_end_iso))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                            (bike_rides['date'] <= iso_to_ymd(data_end_iso))]\n",
     "bike_rides = gpd.GeoDataFrame(bike_rides, geometry='geometry')"
    ]
   },
