--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
     "from shapely import from_wkt\n",
+    "from calendar import SATURDAY\n",
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS,\n",
     "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
-    "                                DNC_START, DNC_END, L_STATIONS_TABLE)\n",
+    "                                DNC_START, DNC_END)\n",
     "from data.geo import meter_to_foot, dms_to_decimal\n",
-    "from data.cta import CTAClient"
+    "from data.datemath import from_ymd"
    ]
   },
   {
@@ -37,7 +38,8 @@
     "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
     "uber_rides_in = \"../data/raw/uber_tract_rides.parquet\"\n",
     "\n",
-    "train_file_out = \"../data/interim/train_stations.geojson\"\n",
+    "train_stations_out = \"../data/interim/train_stations.geojson\"\n",
+    "train_lines_out = \"../data/interim/train_lines.csv\"\n",
     "bus_routes_file_out = \"../data/interim/bus_routes.geojson\"\n",
     "bus_stops_file_out = \"../data/interim/bus_stops.geojson\"\n",
     "bike_stations_file_out = \"../data/interim/bike_stations_gbfs_v2.geojson\"\n",
@@ -308,43 +310,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Station Lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cta_client = CTAClient(60)\n",
-    "lines = ['red','blue','g','brn','p','pexp','y','pnk','o']\n",
-    "line_names = ['red','blue','green','brown','purple','purpleexp','yellow','pink','orange']\n",
-    "station_ids = ['station_name', 'map_id']\n",
-    "\n",
-    "l_lines = cta_client.soda_get_all(L_STATIONS_TABLE, select=f\"{','.join(station_ids)}, {','.join(lines)}\")\n",
-    "l_lines = l_lines.rename(columns=dict(zip(lines, line_names)))\n",
-    "l_lines['purple'] = l_lines['purple'] | l_lines['purpleexp']\n",
-    "l_lines = l_lines.drop(columns=['purpleexp'])\n",
-    "l_lines = l_lines.melt(id_vars=station_ids, var_name='line', value_name='is_line')\n",
-    "l_lines = l_lines.query('is_line').drop(columns='is_line')\n",
-    "l_lines = l_lines.groupby(station_ids, as_index=False)['line'].agg(lambda x: ','.join(set(x)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_stations = train_stations.merge(l_lines, how='left')\n",
-    "assert train_stations['line'].notna().all()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Station Tracts"
    ]
   },
@@ -357,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,22 +487,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daytypes = pd.concat([train_rides[['date','daytype']],bus_rides[['date','daytype']]],ignore_index=True)\n",
-    "daytypes = daytypes.groupby('date')['daytype'].first()"
+    "def label_daytype(df: pd.DataFrame):\n",
+    "    return df.assign(\n",
+    "        dotw = df.date.apply(lambda x: from_ymd(x).weekday()),\n",
+    "        is_weekend = lambda x: x.dotw >= SATURDAY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_rides['daytype'] = bike_rides['date'].map(daytypes)\n",
-    "uber_rides['daytype'] = uber_rides['date'].map(daytypes)"
+    "train_rides = train_rides.pipe(label_daytype)\n",
+    "bike_rides = bike_rides.pipe(label_daytype)\n",
+    "bus_rides = bus_rides.pipe(label_daytype)\n",
+    "uber_rides = uber_rides.pipe(label_daytype)"
    ]
   },
   {
@@ -549,11 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_stations.to_file(train_file_out, index=False)\n",
+    "train_stations.to_file(train_stations_out, index=False)\n",
     "bus_routes.to_file(bus_routes_file_out, index=False)\n",
     "bus_stops.to_file(bus_stops_file_out, index=False)\n",
     "tract_points.to_parquet(tract_file_out, index=False)\n",
@@ -563,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_rides.to_csv(train_rides_out, index=False)\n",
     "bus_rides.to_csv(bus_rides_out, index=False)\n",
     "bike_rides.to_parquet(bike_rides_out, index=False)\n",
-    "uber_rides.to_parquet(uber_rides_out, index=False)"
+    "uber_rides.to_parquet(uber_rides_out, index=False)\n"
    ]
   }
  ],
