rerun pipeline after previous changes

--- a/pipeline/7-merge-transits.ipynb
+++ b/pipeline/7-merge-transits.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations = gpd.read_file(train_file_in)\n",
     "bus_routes = gpd.read_file(bus_routes_file_in)\n",
     "bus_stops = gpd.read_file(bus_stops_file_in)\n",
-    "tract_points = gpd.read_parquet(tract_file_in)\n",
+    "tracts = gpd.read_parquet(tract_file_in)\n",
     "bike_stations = gpd.read_file(bike_stations_file_in)"
    ]
   },
@@ -145,7 +145,7 @@
     "# line at multi-line stations.\n",
     "# TODO: Improve this model of line popularity?\n",
     "train_line_rides = train_rides.assign(rides = train_rides['rides'] / train_rides['map_id'].map(lines_per_station))\n",
-    "train_line_rides = train_line_rides.groupby(['line','date','daytype','DNC'],as_index=False).agg({'rides':'sum'})\n",
+    "train_line_rides = train_line_rides.groupby(['line','date','dotw','is_weekend','DNC'],as_index=False).agg({'rides':'sum'})\n",
     "train_line_rides = train_line_rides.merge(train_line_features)"
    ]
   },
@@ -513,16 +513,31 @@
     "XXX:\n",
     "\n",
     "Community areas are kinda big. I'll use tracts and drop all rides that are\n",
-    "even anonymized at the tract level.\n"
+    "even anonymized at the tract level. But this does drop a lot of observations.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Will drop 264 (0.1%) ride rows (37.6% of rides)\n"
+     ]
+    }
+   ],
    "source": [
-    "# XXX TODO: I dont like this here.\n",
+    "# XXX TODO: I dont like this here. (compared to 8-establish panel?)\n",
+    "# XXX: This is a LARGE proportion of actual rides. It's a small proportion of \n",
+    "#       rows because there's 1/(num tracts) as many null-tract rows.\n",
+    "print(\"Will drop {} ({:.1%}) ride rows ({:.1%} of rides)\".format(\n",
+    "    uber_rides.tract.isna().sum(),\n",
+    "    uber_rides.tract.isna().sum()/len(uber_rides),\n",
+    "    uber_rides[uber_rides.tract.isna()]['rides'].sum() / uber_rides['rides'].sum()\n",
+    "))\n",
     "uber_rides = uber_rides.dropna(subset=['tract'])"
    ]
   },
@@ -538,12 +553,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unlike the CTA station info, I won't merge tracts into uber rides right now.\n",
+    "I'll do that later for all tract-level transits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uber_rides['tract'] = uber_rides['tract'].astype('int64')"
+    "uber_tracts = uber_rides[['tract']].drop_duplicates().dropna()\n",
+    "\n",
+    "# This is kind of weird because I'm going to re-merge tracts later on with everything.\n",
+    "# But the point is just to have column parity with the other transits in this panel.\n",
+    "\n",
+    "uber_tracts = tracts[feature_cols + ['centroid','geoid10']] \\\n",
+    "                .merge(uber_tracts, how='right', validate=\"1:m\",\n",
+    "                       right_on='tract', left_on='geoid10') \\\n",
+    "                .drop(columns=['geoid10']) \\\n",
+    "                .set_geometry('centroid')"
    ]
   },
   {
@@ -552,11 +584,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uber_rides = tract_points[feature_cols+['centroid','geoid10']] \\\n",
-    "                .merge(uber_rides,\n",
-    "                       right_on='tract', left_on='geoid10',\n",
-    "                       how='right', validate=\"1:m\") \\\n",
-    "                .drop(columns=['geoid10'])"
+    "assert len(uber_rides.columns.intersection(uber_tracts.columns)) == 1\n",
+    "uber_rides = uber_rides.merge(uber_tracts, how='left', on='tract')"
    ]
   },
   {
@@ -564,13 +593,6 @@
    "metadata": {},
    "source": [
     "# Panels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Point Panel"
    ]
   },
   {
@@ -601,6 +623,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Point Panel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "All things equal, we should take the bus and uber components with a grain of salt.\n",
     "The uber and bus components have systematically larger measurement error in lat/lon since they\n",
     "are snapped to tract / route centroid. This breaks an OLS assumption. "
@@ -616,6 +645,13 @@
     "                            bike=bike_rides.rename(columns={\"station_name\":\"id\"}),\n",
     "                            uber=uber_rides.rename(columns={'centroid':'geometry'}) \\\n",
     "                                .assign(id = uber_rides['tract'].astype(str)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Line Panel"
    ]
   },
   {
@@ -666,14 +702,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_points = tract_points.pipe(tract_point_statistics, train_stations[['tract','geometry']], 'train')\n",
-    "tract_points = tract_points.pipe(tract_point_statistics, bike_stations[['tract','geometry']], 'bike')\n",
-    "tract_points = tract_points.pipe(tract_point_statistics, bus_stops[['tract','geometry']], 'bus')\n",
-    "\n",
-    "# These don't have a lot of meaning for uber, particularly because the accessability==0 always\n",
-    "# but just throwing in for good measure.\n",
-    "tract_points = tract_points.pipe(tract_point_statistics, \n",
-    "                                 uber_rides[['tract','centroid']].drop_duplicates().set_geometry('centroid'), 'uber')"
+    "tracts = tracts.pipe(tract_point_statistics, train_stations[['tract','geometry']], 'train')\n",
+    "tracts = tracts.pipe(tract_point_statistics, bike_stations[['tract','geometry']], 'bike')\n",
+    "tracts = tracts.pipe(tract_point_statistics, bus_stops[['tract','geometry']], 'bus')\n",
+    "tracts = tracts.pipe(tract_point_statistics, uber_tracts[['tract','centroid']], 'uber')"
    ]
   },
   {
@@ -682,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_cols = ['tract','date','daytype','DNC']\n",
+    "id_cols = ['tract','date','dotw','is_weekend','DNC']\n",
     "\n",
     "train_rides_by_tract = train_rides[id_cols + ['rides']].groupby(id_cols, as_index=False).sum()\n",
     "bike_rides_by_tract = bike_rides[id_cols + ['start_rides','end_rides','rides']].groupby(id_cols, as_index=False).sum()\n",
@@ -727,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_panel = tract_points.merge(tract_rides, right_on='id', left_on='geoid10')\n",
+    "tract_panel = tracts.merge(tract_rides, right_on='id', left_on='geoid10')\n",
     "tract_panel['lat'] = tract_panel['centroid'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).y\n",
     "tract_panel['long'] = tract_panel['centroid'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).x\n",
     "tract_panel = tract_panel.drop(columns=['centroid','geometry','geoid10'])"
