--- a/pipeline/8-establish-panel.ipynb
+++ b/pipeline/8-establish-panel.ipynb
@@ -38,7 +38,7 @@
     "point_panel_in = \"../data/interim/point_panel.parquet\"\n",
     "line_panel_in = \"../data/interim/line_panel.parquet\"\n",
     "tract_panel_in = \"../data/interim/tract_panel.parquet\"\n",
-    "chi_tracts_in = \"../data/interim/tracts.geoparquet\"\n",
+    "tracts_in = \"../data/interim/tracts.geoparquet\"\n",
     "\n",
     "point_panel_out = \"../data/final/point_panel.parquet\"\n",
     "line_panel_out = \"../data/final/line_panel.parquet\"\n",
@@ -61,7 +61,7 @@
     "point_panel = pd.read_parquet(point_panel_in)\n",
     "line_panel = pd.read_parquet(line_panel_in)\n",
     "tract_panel = pd.read_parquet(tract_panel_in)\n",
-    "chi_tracts = gpd.read_parquet(chi_tracts_in)['geoid10']"
+    "tracts = gpd.read_parquet(tracts_in)['geoid10']"
    ]
   },
   {
@@ -112,28 +112,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def label_weekends(df):\n",
-    "    df['weekend'] = df['daytype'].map({\"W\":0, \"A\": 1, \"U\": 1})\n",
-    "    return df\n",
-    "\n",
-    "point_panel = point_panel.pipe(label_weekends)\n",
-    "line_panel = line_panel.pipe(label_weekends)\n",
-    "tract_panel = tract_panel.pipe(label_weekends)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def fillna(df, fills: dict):\n",
     "    return df.assign(**{col: df[col].fillna(val) for col, val in fills.items()})\n",
     "\n",
     "# Assert that null features are due to non-chicago tracts. \n",
     "# Let's impute correct values instead of dropping tracts outside of chicago (ie ubers and bike stations)\n",
-    "assert all(tract_panel['UCMP'].notna() | ~tract_panel['id'].isin(chi_tracts))\n",
-    "assert all(tract_panel['airport'].notna() | ~tract_panel['id'].isin(chi_tracts))\n",
+    "assert all(tract_panel['UCMP'].notna() | ~tract_panel['id'].isin(tracts))\n",
+    "assert all(tract_panel['airport'].notna() | ~tract_panel['id'].isin(tracts))\n",
     "assert all(point_panel[['UCMP','airport']].notna().all(axis=1) |\n",
     "         ((point_panel['transit']=='uber') & point_panel['tract'].notna()))\n",
     "\n",
@@ -144,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +185,7 @@
      "text": [
       "Dropping 4923 (1%) point rows\n",
       "Dropping 484 (2%) line rows\n",
-      "Dropping 0 (0%) tract rows\n"
+      "Dropping 5229 (1%) tract rows\n"
      ]
     }
    ],
@@ -219,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,18 +225,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aggregate"
+    "# Aggregate over Time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_agg(df):\n",
     "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long']}\n",
-    "    time_aggs = {'rides':'sum','DNC':'max', 'weekend': 'max'}  \n",
+    "    time_aggs = {'rides':'sum','DNC':'max', 'is_weekend': 'max'}  \n",
     "    # weekend is constant for weekly model but we just won't include it in the model spec\n",
     "    df_weekly = df.groupby(['year-week','id','transit'], as_index=False).agg(unit_aggs | time_aggs)\n",
     "    df_daily = df.groupby(['date','id','transit'], as_index=False).agg(unit_aggs | time_aggs)\n",
@@ -290,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -365,8 +350,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.240186</td>\n",
-       "      <td>1.460437</td>\n",
+       "      <td>1.240187</td>\n",
+       "      <td>1.460438</td>\n",
        "      <td>1.177595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -389,8 +374,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>400.547424</td>\n",
-       "      <td>318.660446</td>\n",
+       "      <td>400.547217</td>\n",
+       "      <td>318.660266</td>\n",
        "      <td>0.795562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -406,15 +391,15 @@
       "text/plain": [
        "                     daily      weekly     ratio\n",
        "mean              3.720461     4.79497  1.288811\n",
-       "std               1.240186    1.460437  1.177595\n",
+       "std               1.240187    1.460438  1.177595\n",
        "mde               0.008221    0.022906  2.786488\n",
        "effect_size       1.175304    2.605443  2.216825\n",
        "power_achieved         1.0         1.0       1.0\n",
-       "t_stat          400.547424  318.660446  0.795562\n",
+       "t_stat          400.547217  318.660266  0.795562\n",
        "is_detectable         True        True       1.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -518,8 +503,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>22610.053563</td>\n",
-       "      <td>10028.79749</td>\n",
+       "      <td>22610.041876</td>\n",
+       "      <td>10028.79182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -537,11 +522,11 @@
        "mde                 0.000146     0.000728\n",
        "effect_size         1.175304     2.605443\n",
        "power_achieved           1.0          1.0\n",
-       "t_stat          22610.053563  10028.79749\n",
+       "t_stat          22610.041876  10028.79182\n",
        "is_detectable           True         True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
