--- a/notebooks/replication/dnc-effect/poi-catchement.ipynb
+++ b/notebooks/replication/dnc-effect/poi-catchement.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "poi_file_in = \"../../data/raw/poi_buildings.geojson\"\n",
     "train_stations_in = \"../../data/interim/train_stations.geojson\"\n",
     "train_lines_in = \"../../data/raw/train_lines.geojson\"\n",
-    "bus_routes_in = \"../../data/interim/bus_routes.geojson\"\n",
+    "bus_routes_in = \"../../data/raw/bus_routes.geojson\"\n",
     "bus_stops_in = \"../../data/interim/bus_stops.geojson\"\n",
     "bike_stations_in = \"../../data/interim/bike_stations_gbfs_v2.geojson\"\n",
     "tract_file_in = \"../../data/interim/tracts.geoparquet\"\n",
