--- a/notebooks/replication/transit-panel/bus-routes-viz.ipynb
+++ b/notebooks/replication/transit-panel/bus-routes-viz.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "routes = gpd.read_file(\"../../data/interim/bus_routes.geojson\")\n",
+    "routes = gpd.read_file(\"../../data/raw/bus_routes.geojson\")\n",
     "rides = pd.read_csv(\"../../data/interim/bus_rides.csv\")"
    ]
   },
